# soteria

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  MyContainer  README.md  list.txt
include/cli/: cli.h
include/container/: container.h
include/core/: container.h  fat.h  version.h.in
include/encryption/: aes.h
include/utils/: compression.h  encryption.h  file.h
lib/: CMakeLists.txt  main.cpp
lib/cli/: CMakeLists.txt  cli.cpp
lib/container/: CMakeLists.txt  container.cpp
lib/core/: CMakeLists.txt  container.cpp  fat.cpp
lib/encryption/: CMakeLists.txt  aes.cpp
lib/utils/: CMakeLists.txt  compression.cpp  encryption.cpp  file.cpp
test/utils/: test_aes.cpp
tests/core/: test_container.cpp
tests/utils/: test_aes.cpp  test_hash.cpp  test_rand.cpp
